[tool.poetry]
name = "jumpstarter"
version = "0.1.0"
description = "Program initialization toolkit"
authors = ["Omer Katz <omer.drow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
networkx = "^2.4"
anyio = "^1.2.3"
dependencies = "^1.0.0"
attrs = "^19.3.0"
cached-property = { version = "^1.5.0", python = "<3.8" }
stories = { git = "https://github.com/thedrow/stories.git", branch = "class-stories" }
transitions = "^0.8.1"
trio-asyncio = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pydocstyle = "^5.0.2"
pycodestyle = "^2.5.0"
trio = "^0.13.0"
black = "^19.10b0"
mock = {version = "^4.0.1", python = "<3.8"}
pytest-echo = "^1.7.1"
ipython = "^7.13.0"
pytest-xdist = "^1.31.0"
pytest-randomly = "^3.2.1"
pytest-cov = "^2.8.1"

[tool.black]
line-length = 120
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
